v2: Fix rendering with scale factors less than 100%

It looks like FrameSvg rendering breaks with scale factors less than
100%. So, clamp the device pixel ratio for svgs to make sure that
FrameSvgs fill the decoration as expected.

BUG: 520272