v2/decorationbutton.cpp
@@ -5,6 +5,7 @@
 */
 
 #include "decorationbutton.h"
+#include "util.h"
 
 #include <KDecoration3/DecoratedWindow>
 
@@ -242,7 +243,7 @@ SvgDecorationButton::SvgDecorationButton(KDecoration3::DecorationButtonType type
     : DecorationButton(type, decoration, parent)
 {
     connect(decoration->window(), &KDecoration3::DecoratedWindow::scaleChanged, this, [this, decoration]() {
-        m_svgs.setDevicePixelRatio(decoration->window()->scale());
+        m_svgs.setDevicePixelRatio(frameSvgScale(decoration->window()->scale()));
     });
 
     connect(decoration->window(), &KDecoration3::DecoratedWindow::activeChanged, this, &SvgDecorationButton::updateFrame);
@@ -254,7 +255,7 @@ SvgDecorationButton::SvgDecorationButton(KDecoration3::DecorationButtonType type
 
 void SvgDecorationButton::setImagePath(const QString &path, const QSizeF &implicitSize)
 {
-    m_svgs = SvgFrameSet::from(path, implicitSize, decoration()->window()->scale());
+    m_svgs = SvgFrameSet::from(path, implicitSize, frameSvgScale(decoration()->window()->scale()));
 
     updateFrame();
     setGeometry(QRectF(QPointF(0, 0), implicitSize));
@@ -313,7 +314,7 @@ MaximizeDecorationButton::MaximizeDecorationButton(KDecoration3::Decoration *dec
     : DecorationButton(KDecoration3::DecorationButtonType::Maximize, decoration, parent)
 {
     connect(decoration->window(), &KDecoration3::DecoratedWindow::scaleChanged, this, [this, decoration]() {
-        const qreal devicePixelRatio = decoration->window()->scale();
+        const qreal devicePixelRatio = frameSvgScale(decoration->window()->scale());
 
         m_maximize.setDevicePixelRatio(devicePixelRatio);
         if (m_restore) {
@@ -336,7 +337,7 @@ MaximizeDecorationButton::MaximizeDecorationButton(KDecoration3::Decoration *dec
 
 void MaximizeDecorationButton::setImagePath(const QString &maximizeImagePath, const QString &restoreImagePath, const QSizeF &implicitSize)
 {
-    const qreal devicePixelRatio = decoration()->window()->scale();
+    const qreal devicePixelRatio = frameSvgScale(decoration()->window()->scale());
 
     m_maximize = SvgFrameSet::from(maximizeImagePath, implicitSize, devicePixelRatio);
     if (!restoreImagePath.isEmpty()) {
